--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "start": "ts-node ./src/index.ts",
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ts-mocha -p ./tsconfig.json ./src/**/*.test.ts",
     "watch": "tsc -w & nodemon ."
   },
   "author": "",
@@ -14,14 +15,24 @@
   "dependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
-    "@types/http-errors": "^1.8.0",
+    "chai": "^4.3.4",
     "cookie-parser": "^1.4.5",
-    "express": "^4.17.1",
-    "http-errors": "^1.8.0"
+    "http-errors": "^1.8.0",
+    "ts-node": "^9.1.1"
   },
   "devDependencies": {
-    "typescript": "^4.2.3",
+    "@types/chai": "^4.2.15",
+    "@types/chai-http": "^4.2.0",
+    "@types/expect": "^24.3.0",
+    "@types/http-errors": "^1.8.0",
+    "@types/mocha": "^8.2.2",
+    "@types/request": "^2.48.5",
+    "chai-http": "^4.3.0",
+    "express": "^4.17.1",
+    "mocha": "^8.3.2",
+    "ts-mocha": "^8.0.0",
     "tslint": "^6.1.3",
+    "typescript": "^4.2.3",
     "typescript-tslint-plugin": "^1.0.1"
   }
 }
