--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "ts-node ./src/index.ts",
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
-    "test": "ts-mocha -p ./tsconfig.json ./src/**/*.test.ts",
+    "test": "nyc ts-mocha -p ./tsconfig.json ./src/**/*.test.ts",
     "watch": "tsc -w & nodemon ."
   },
   "author": "",
@@ -30,6 +30,7 @@
     "chai-http": "^4.3.0",
     "express": "^4.17.1",
     "mocha": "^8.3.2",
+    "nyc": "^15.1.0",
     "ts-mocha": "^8.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.2.3",
